--- a/popup.html
+++ b/popup.html
@@ -3,17 +3,49 @@
 <head>
     <title>Error Tracker</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 10px; }
-        #error-list { list-style-type: none; padding: 0; }
-        #error-list li { padding: 5px 0; }
+        body { 
+            font-family: Arial, sans-serif; 
+            padding: 10px; 
+            background-color: #f9f9f9;
+        }
+        #error-list { 
+            list-style-type: none; 
+            padding: 0; 
+        }
+        #error-list li { 
+            padding: 10px; 
+            margin-bottom: 10px; 
+            background-color: #fff; 
+            border: 1px solid #ddd; 
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+        }
+        pre { 
+            background-color: #f5f5f5; 
+            padding: 5px; 
+            border-radius: 4px; 
+            overflow-x: auto;
+        }
+        strong { 
+            font-weight: bold; 
+        }
+        a { 
+            color: #007bff; 
+            text-decoration: none; 
+        }
+        a:hover { 
+            text-decoration: underline; 
+        }
     </style>
 </head>
 <body>
     <h2>Captured Errors</h2>
     <ul id="error-list"></ul>
+    <button id="clear-logs">Clear Logs</button>
     <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
