More updates before working on better UI stuff

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>API Tracker</title>
+    <title>Enhanced Error and API Tracker</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -41,12 +41,13 @@
     </style>
 </head>
 <body>
-    <h2>Captured API Calls</h2>
+    <h2>Captured API Calls and Errors</h2>
     <ul id="api-list"></ul>
     <button id="clear-logs">Clear Logs</button>
     <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
